Fixed overflow in boxes

--- a/config/styles/general/_feather_boxes.scss
+++ b/config/styles/general/_feather_boxes.scss
@@ -35,7 +35,6 @@
   bottom: 0;
   right: 0;
   z-index: 2;
-  overflow-y: scroll;
   text-align: center;
   @extend .background-color-transition;
 
